k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: aidemo
  namespace: ai
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aidemo
