k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aidemo-fe
  namespace: ai
  annotations:
    kubernetes.io/ingress.class: caddy
spec:
  rules:
    - host: 'aidemo.qc.bonbonshop.vn'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aidemo
                port:
                  number: 3000
